rust/src/bindings.rs

extern "C" { pub fn efanoenc256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efanodec256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1enc256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1dec256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn p4nzzenc128v8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn p4nzzdec128v8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn p4nzzenc128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn p4nzzdec128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn p4nzzenc128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn p4nzzdec128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn p4nzzenc128v64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn p4nzzdec128v64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn bvzenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn bvzdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn bvzenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn bvzdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn bvzenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn bvzdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn bvzenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn bvzdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn bvzzenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn bvzzdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn bvzzenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn bvzzdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn bvzzenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn bvzzdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn bvzzenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn bvzzdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn fpgenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fpgdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn fpgenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fpgdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn fpgenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fpgdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn fpgenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn fpgdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn fphenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fphdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn fphenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fphdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn fphenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fphdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn fphenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn fphdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn fpc0enc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fpc0enc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fpc0enc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fpc0enc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn fpcdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn fpcenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fpcdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn fpcenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fpcdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn fpcenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fpcdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn fpcenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn fpxenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fpxdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn fpxenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fpxdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn fpxenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fpxdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn fpxenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn fpxdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn fpfcmenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fpfcmdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn fpfcmenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fpfcmdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn fpfcmenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fpfcmdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn fpfcmenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn fpfcmdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn fpdfcmenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fpdfcmdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn fpdfcmenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fpdfcmdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn fpdfcmenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fpdfcmdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn fpdfcmenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
extern "C" { pub fn fpdfcmdec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64 , start : u64) -> usize ; }
extern "C" { pub fn fp2dfcmenc8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u8) -> usize ; }
extern "C" { pub fn fp2dfcmdec8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8 , start : u8) -> usize ; }
extern "C" { pub fn fp2dfcmenc16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u16) -> usize ; }
extern "C" { pub fn fp2dfcmdec16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16 , start : u16) -> usize ; }
extern "C" { pub fn fp2dfcmenc32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u32) -> usize ; }
extern "C" { pub fn fp2dfcmdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32 , start : u32) -> usize ; }
extern "C" { pub fn fp2dfcmenc64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> usize ; }
